# src/routes.js
@@ -1,13 +1,13 @@
 const express = require("express");
 const routes = express.Router();
+const authToken = require("./middleware/authenticate");
 
 const UserController = require("./controllers/UserController.js");
 
 routes.get("/", UserController.getMessage);
-routes.get("/users", UserController.listenUser);
-routes.get("/users/:userId", UserController.findUser);
-routes.get("/terms", UserController.termsServices);
-routes.post("/createUser", UserController.createUser);
-routes.delete("/users/:userId", UserController.deleteUser);
+routes.get("/users", authToken, UserController.listenUser);
+routes.get("/user/:userId", authToken, UserController.findUser);
+routes.post("/createUser", authToken, UserController.createUser);
+routes.delete("/users/:userId", authToken, UserController.deleteUser);
 
 module.exports = routes;
